# DankCasterLegacy

./: CMakeLists.txt  meson.build
cmake/Modules/: FindCUnit.cmake  FindFFmpeg.cmake
include/libdkc/: dkc.h  dkc_app.h  dkc_app_internal.h  dkc_backend.h  dkc_param.h  dkc_params.h  dkc_rc.h  dkc_scene.h  dkc_scene_internal.h  dkc_sink.h  dkc_sink_internal.h  dkc_source.h  dkc_source_internal.h  dkc_types.h
include/libdkc/backends/dummy/: dkc_dummy_backend.h
include/libdkc/backends/gstreamer-1.0/: dkc_gst_backend.h  dkc_gst_sinks.h  dkc_gst_sources.h  gstbackendctx.h
include/libdkcst/: dkcst.h  dkcst_app.h  dkcst_backend.h  dkcst_param.h  dkcst_params.h  dkcst_rc.h  dkcst_scene.h  dkcst_sink.h  dkcst_source.h
include/libdkcst/backends/gstreamer-1.0/: dkcst_gst_backend.h  gstbackendctx.h
include/libdkcst/sources/: dummy.h  v4l2.h
src/: CMakeLists.txt  main.c  main.cpp
src/libDkCst/: dkcst_scene.c  dkcst_source.c
src/libDkCst/sources/: dummy.c
src/libdkc/: CMakeLists.txt  dkc.c  dkc_app.c  dkc_backend.c  dkc_param.c  dkc_params.c  dkc_rc.c  dkc_scene.c  dkc_sink.c  dkc_source.c
src/libdkc/backends/dummy/: dkc_dummy_backend.c
src/libdkc/backends/gstreamer-1.0/: gstbkn_audiomixer_bin.c  gstbkn_create_scene.c  gstbkn_create_sink.c  gstbkn_create_sink_dummy.c  gstbkn_create_source.c  gstbkn_create_source_dummy.c  gstbkn_create_source_v4l2.c  gstbkn_delete_scene.c  gstbkn_delete_sink.c  gstbkn_delete_source.c  gstbkn_init.c  gstbkn_scenemanager_bin.c  gstbkn_start.c  gstbkn_stop.c  gstbkn_uninit.c  gstbkn_unwrap_source.c  gstbkn_update_wrapped_source.c  gstbkn_wrap_source.c
src/libdkcst/: CMakeLists.txt  dkcst.c  dkcst_app.c  dkcst_backend.c  dkcst_param.c  dkcst_params.c  dkcst_rc.c  dkcst_scene.c  dkcst_sink.c  dkcst_source.c
src/libdkcst/backends/gstreamer-1.0/: gstbkn_audiomixer_bin.c  gstbkn_create_scene.c  gstbkn_create_sink.c  gstbkn_create_source.c  gstbkn_delete_scene.c  gstbkn_delete_sink.c  gstbkn_delete_source.c  gstbkn_init.c  gstbkn_scenemanager_bin.c  gstbkn_uninit.c  gstbkn_unwrap_source.c  gstbkn_wrap_source.c
src/libdkcst/sources/: dummy.c
src/test/: CMakeLists.txt
src/test/functional/: CMakeLists.txt  dkc_dummy_test.c
src/test/unit/: CMakeLists.txt  dkc_param_test.c  dkc_scene_test.c  dkc_sink_test.c  dkc_source_test.c
src/unittests/: CMakeLists.txt  dkc_param_test.c  dkc_scene_test.c  dkc_sink_test.c  dkc_source_test.c  dkcst_param_test.c  dkcst_scene_test.c  dkcst_sink_test.c  dkcst_source_test.c
